[project]
name = "llm-meter"
version = "0.1.0"
description = "Automated LLM usage and friction tracking across machines"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
llm-meter = "llm_meter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
